re PR c++/42266 ([C++0x] ICE with decltype and variadic templates)

PR c++/42266
	* cvt.c (convert_from_reference): Do nothing if TREE_TYPE is null.

From-SVN: r154964